--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*---------------------------RESET---------------------------*/
 * {
     margin: 0;
     padding: 0;
@@ -5,24 +6,28 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/*---------------------------GENERAL---------------------------*/
 body {
     background-color: #F2F4F7;
     
 }
 
+/*---------------------------HEADER---------------------------*/
 .top-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
     background:#244C72;
-    border-bottom: 1px solid #808080;
+    border-bottom: 1px solid #F2F4F7;
 }
 
+/*---LOGO ADJUSTMENT---*/
 .logo {
     height: 50px;
 }
 
+/*---MENU & SEARCH BUTTONS---*/
 .menu-toggle,
 .search {
     font-size: 2rem;
@@ -30,4 +35,35 @@ body {
     background: none;
     border: none;
     cursor: pointer;
+}
+
+/*---------------------------NAVIGATION MENU---------------------------*/
+.main-nav{
+    background: #244C72;
+}
+
+.main-nav ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    gap: 2rem;
+    padding: 1rem;
+}
+
+.main-nav a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #F2F4F7;
+    padding: 0.5rem 1rem;
+    border-radius: 12px;
+}
+
+.main-nav a:hover {
+    text-decoration: underline;
+}
+
+.main-nav a:active {
+    background-color: #122A40;
+    color: #F2F4F7;
+    text-decoration: none;
 }
