--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 16px 32px;
     background:#244C72;
     border-bottom: 1px solid #F2F4F7;
 }
@@ -30,7 +30,7 @@ body {
 /*---MENU & SEARCH BUTTONS---*/
 .menu-toggle,
 .search {
-    font-size: 2rem;
+    font-size: 32px;
     color: #F2F4F7;
     background: none;
     border: none;
@@ -38,23 +38,21 @@ body {
 }
 
 /*---------------------------NAVIGATION MENU---------------------------*/
-.main-nav{
-    background: #244C72;
-}
 
 .main-nav ul {
+    background: #244C72;
     display: flex;
     justify-content: center;
     list-style: none;
-    gap: 2rem;
-    padding: 1rem;
+    gap: 32px;
+    padding: 16px;
 }
 
 .main-nav a {
     text-decoration: none;
     font-weight: bold;
     color: #F2F4F7;
-    padding: 0.5rem 1rem;
+    padding: 8px 16px;
     border-radius: 12px;
 }
 
@@ -80,4 +78,43 @@ body {
     text-align: center;
     justify-content: center;
     border-bottom: 5px solid #244C72;
+}
+
+.hero-buttons {
+    margin-top: 12px;
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+}
+
+.btn {
+    background-color:#244C72;
+    padding: 8px 16px;
+    border-radius: 12px;
+    text-decoration: none;
+    color: #F2F4F7;
+    
+}
+
+.image-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8px;
+    padding: 12px;
+}
+
+.grid-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.site-footer {
+    background-color: #122A40;
+    color: #F2F4F7;
+    text-align: center;
+    padding: 16px;
+    font-size: 16px;
+    line-height: 2rem;
 }
