--- a/style.css
+++ b/style.css
@@ -3,20 +3,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 /*---------------------------GENERAL---------------------------*/
 body {
+    font-family: 'Josefin Sans', sans-serif;
+    color: #244C72;
     background-color: #F2F4F7;
-    
+    margin: 0;
 }
+
 
 /*---------------------------HEADER---------------------------*/
 .top-bar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 16px 32px;
     background:#244C72;
     border-bottom: 1px solid #F2F4F7;
@@ -38,7 +40,7 @@ body {
 }
 
 /*---------------------------NAVIGATION MENU---------------------------*/
-
+/*--MAIN BUTTONS--*/
 .main-nav ul {
     background: #244C72;
     display: flex;
@@ -88,33 +90,126 @@ body {
 }
 
 .btn {
-    background-color:#244C72;
     padding: 8px 16px;
     border-radius: 12px;
     text-decoration: none;
     color: #F2F4F7;
+    background-color: #244C72;
+    justify-content: center;
+    list-style: none;
     
 }
 
-.image-grid{
+/*---------------------------IMAGE GRID---------------------------*/
+.img-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8px;
-    padding: 12px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 16px;
+    padding: 16px;
 }
 
-.grid-img {
+.img-grid img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
     display: block;
+    object-fit: cover;
+    border-radius: 8px; 
 }
-
+/*---------------------------FOOTER---------------------------*/
 .site-footer {
-    background-color: #122A40;
+    background-color: #244C72;
     color: #F2F4F7;
     text-align: center;
     padding: 16px;
     font-size: 16px;
-    line-height: 2rem;
+    line-height: 32px;
+}
+
+/*---------------------------CONTACT PAGE---------------------------*/
+.contact-page {
+    padding: 24px;
+}
+
+.contact-page h1 {
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+/* FLEX LAYOUT */
+.contact-layout {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+}
+
+/* MAP */
+.map-box {
+    flex: 1;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.map-box iframe {
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
+    border: 0;
+}
+
+/* DETAILS */
+.contact-details {
+    flex: 1;
+    background: #F2F4F7;
+    padding: 20px;
+    border-radius: 12px;
+}
+
+.contact-details h2 {
+    margin-top: 0;
+}
+
+.contact-details p {
+    margin-bottom: 16px;
+}
+
+/*---------------------------CONTACT FORM---------------------------*/
+
+.contact-form label {
+    display: block;
+    margin-bottom: 4px;
+}
+
+.contact-form input,
+.contact-form textarea,
+.contact-form select {
+    appearance: none;
+    font-size: 1em;
+
+    border: 1px solid #122A40;
+    border-radius: 8px;
+
+    display: block;
+    width: 100%;
+    padding: 10px;
+}
+
+.contact-form textarea {
+    resize: none;
+}
+
+.contact-form .input-section {
+    margin: 16px 0;
+}
+
+.contact-form form {
+    max-width: 420px;
+    margin: 0 auto;
+    padding: 24px;
+    border-radius: 12px;
+    background: #F2F4F7;
+}
+
+/*MOBILE*/
+@media (max-width: 600px) {
+
 }
